--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,14 +188,14 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.footer {
+ /* replaced footer class with footer */
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
