--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,8 @@ header h1 {
     font-size: 48px;
 }
 
-header h1 .seo {
+/* replaced id=seo with span */
+span {
     color: #d9dcd6;
 }
 
@@ -77,7 +78,8 @@ p {
     margin-left: 20px;
 }
 
-.benefits {
+/* changed benefits class to aside */
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -87,55 +89,28 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
+ 
+/* replaced unique class selectors for all aside sections*/
 
-.benefit-lead {
+aside section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/* replaced unique class selectors for all aside section h3*/
+aside section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/* replaced unique selectors for all aside section img */
+aside section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+/* can share attr */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -162,7 +137,8 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+ 
+/* these img tags can share attr */
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -174,7 +150,8 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
-
+  
+/* these h2 tags can share attr */
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
